Updating to add the Reserve/Release calls... this version is known to be broken... just wanting to move it to the laptop

--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/DualController.lpi
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/DualController.lpi
@@ -28,7 +28,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="4">
+    <Units Count="5">
       <Unit0>
         <Filename Value="DualController.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -50,6 +50,10 @@
         <Filename Value="..\..\Target-Common\lcc_alias_server.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit3>
+      <Unit4>
+        <Filename Value="..\..\Target-Common\lcc_alias_mappings.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit4>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
