--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/DualController.lpi
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/DualController.lpi
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="12"/>
+    <Version Value="11"/>
     <PathDelim Value="\"/>
     <General>
-      <Flags>
-        <CompatibilityMode Value="True"/>
-      </Flags>
       <SessionStorage Value="InProjectDir"/>
+      <MainUnit Value="0"/>
       <Title Value="DualController"/>
       <Scaled Value="True"/>
       <ResourceType Value="res"/>
@@ -23,6 +21,7 @@
     </PublishOptions>
     <RunParams>
       <FormatVersion Value="2"/>
+      <Modes Count="0"/>
     </RunParams>
     <RequiredPackages Count="1">
       <Item1>
@@ -68,14 +67,14 @@
       <OtherUnitFiles Value="..\..\Target-Common;..\..\Target-PC;..\..\Target-PC\Synapse_LCC;..\..\Target-PC\HardwareConnection"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
-    <Conditionals Value="if TargetOS = &apos;darwin&apos; then
+    <Conditionals Value="if TargetOS = 'darwin' then
 begin
-//  CustomOptions += &apos;-k-macosx_version_min -k10.4&apos;;
-//  CustomOptions += &apos;-XR/Developer/SDKs/MacOSX10.4u.sdk/&apos;;
-  CustomOptions += &apos; -dUseCThreads&apos;;
+//  CustomOptions += '-k-macosx_version_min -k10.4';
+//  CustomOptions += '-XR/Developer/SDKs/MacOSX10.4u.sdk/';
+  CustomOptions += ' -dUseCThreads';
 end;
-if TargetOS = &apos;linux&apos; then
-  CustomOptions += &apos; -dUseCThreads&apos;;"/>
+if TargetOS = 'linux' then
+  CustomOptions += ' -dUseCThreads';"/>
     <BuildMacros>
       <Count Value="1"/>
       <Item1>
@@ -96,8 +95,6 @@ if TargetOS = &apos;linux&apos; then
         <StackChecks Value="True"/>
       </Checks>
       <VerifyObjMethodCallValidity Value="True"/>
-      <TargetCPU Value="x86_64"/>
-      <TargetOS Value="darwin"/>
       <Optimizations>
         <OptimizationLevel Value="0"/>
       </Optimizations>
