--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/DualController.lpi
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/DualController.lpi
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="11"/>
+    <Version Value="12"/>
     <PathDelim Value="\"/>
     <General>
+      <Flags>
+        <CompatibilityMode Value="True"/>
+      </Flags>
       <SessionStorage Value="InProjectDir"/>
-      <MainUnit Value="0"/>
       <Title Value="DualController"/>
       <Scaled Value="True"/>
       <ResourceType Value="res"/>
@@ -21,14 +23,13 @@
     </PublishOptions>
     <RunParams>
       <FormatVersion Value="2"/>
-      <Modes Count="0"/>
     </RunParams>
     <RequiredPackages Count="1">
       <Item1>
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="5">
+    <Units Count="6">
       <Unit0>
         <Filename Value="DualController.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -54,6 +55,13 @@
         <Filename Value="..\..\Target-Common\lcc_alias_mappings.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit4>
+      <Unit5>
+        <Filename Value="formeditconsistitem.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="FormConsistEditor"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="FormEditConsistItem"/>
+      </Unit5>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -67,14 +75,14 @@
       <OtherUnitFiles Value="..\..\Target-Common;..\..\Target-PC;..\..\Target-PC\Synapse_LCC;..\..\Target-PC\HardwareConnection"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
-    <Conditionals Value="if TargetOS = 'darwin' then
+    <Conditionals Value="if TargetOS = &apos;darwin&apos; then
 begin
-//  CustomOptions += '-k-macosx_version_min -k10.4';
-//  CustomOptions += '-XR/Developer/SDKs/MacOSX10.4u.sdk/';
-  CustomOptions += ' -dUseCThreads';
+//  CustomOptions += &apos;-k-macosx_version_min -k10.4&apos;;
+//  CustomOptions += &apos;-XR/Developer/SDKs/MacOSX10.4u.sdk/&apos;;
+  CustomOptions += &apos; -dUseCThreads&apos;;
 end;
-if TargetOS = 'linux' then
-  CustomOptions += ' -dUseCThreads';"/>
+if TargetOS = &apos;linux&apos; then
+  CustomOptions += &apos; -dUseCThreads&apos;;"/>
     <BuildMacros>
       <Count Value="1"/>
       <Item1>
@@ -101,7 +109,7 @@ if TargetOS = 'linux' then
     </CodeGeneration>
     <Linking>
       <Debugging>
-        <DebugInfoType Value="dsDwarf2"/>
+        <DebugInfoType Value="dsDwarf2Set"/>
         <UseValgrind Value="True"/>
       </Debugging>
       <Options>
