--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/DualController.lpi
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/DualController.lpi
@@ -29,7 +29,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="6">
+    <Units Count="7">
       <Unit0>
         <Filename Value="DualController.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -62,6 +62,10 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="FormEditConsistItem"/>
       </Unit5>
+      <Unit6>
+        <Filename Value="..\..\Target-Common\lcc_train_server.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit6>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
