--- a/Projects/Smart Mobile/SMS Throttle/Delphi/OpenLCBThrottle/OpenLCBThrottle.dproj
+++ b/Projects/Smart Mobile/SMS Throttle/Delphi/OpenLCBThrottle/OpenLCBThrottle.dproj
@@ -6,7 +6,7 @@
         <MainSource>OpenLCBThrottle.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
-        <Platform Condition="'$(Platform)'==''">Win32</Platform>
+        <Platform Condition="'$(Platform)'==''">Win64</Platform>
         <TargetedPlatforms>693267</TargetedPlatforms>
         <AppType>Application</AppType>
     </PropertyGroup>
@@ -158,7 +158,7 @@
         <DCC_S>false</DCC_S>
         <DCC_F>false</DCC_F>
         <DCC_K>false</DCC_K>
-        <DCC_UnitSearchPath>Z:\LccLib\Projects\Smart Mobile\SMS Throttle\Target-Common;Z:\LccLib\Projects\Smart Mobile\SMS Throttle\Target-PC;Z:\LccLib\Projects\Smart Mobile\SMS Throttle\Target-PC\HardwareConnection;C:\Program Files (x86)\Embarcadero\Studio\22.0\source\data\dsnap;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+        <DCC_UnitSearchPath>Z:\LccLib\Projects\Smart Mobile\SMS Throttle\Target-Common;Z:\LccLib\Projects\Smart Mobile\SMS Throttle\Target-PC;Z:\LccLib\Projects\Smart Mobile\SMS Throttle\Target-PC\HardwareConnection;C:\Program Files (x86)\Embarcadero\Studio\22.0\source\data\dsnap;Z:\LccLib\Projects\Smart Mobile\SMS Throttle\Target-PC\Synapse_LCC;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <FeatureFilesAdded>Interbase;DB2;Firebird;SQLite</FeatureFilesAdded>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Android)'!=''">
@@ -449,6 +449,7 @@
                 <Platform value="Android64">True</Platform>
                 <Platform value="iOSDevice64">True</Platform>
                 <Platform value="iOSSimARM64">True</Platform>
+                <Platform value="Linux64">False</Platform>
                 <Platform value="OSX64">True</Platform>
                 <Platform value="OSXARM64">True</Platform>
                 <Platform value="Win32">True</Platform>
