--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/TrainCommander.lpi
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/TrainCommander.lpi
@@ -136,7 +136,7 @@ if TargetOS = &apos;linux&apos; then
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="7">
+    <Units Count="8">
       <Unit0>
         <Filename Value="TrainCommander.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -170,8 +170,13 @@ if TargetOS = &apos;linux&apos; then
         <Filename Value="servervisualunit.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="FormServerInfo"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit6>
+      <Unit7>
+        <Filename Value="..\..\Target-Common\lcc_common_objects.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit7>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
