Has gotten too bloated... Snapshot before starting to try to clean up classes

--- a/Projects/Smart Mobile/SMS Throttle/Delphi/LccThrottleApp/LccThrottleApp.dproj
+++ b/Projects/Smart Mobile/SMS Throttle/Delphi/LccThrottleApp/LccThrottleApp.dproj
@@ -324,6 +324,7 @@
             <Form>LccThrottleAppForm</Form>
             <FormType>fmx</FormType>
         </DCCReference>
+        <DCCReference Include="..\..\Target-PC\lcc_cdi_parser_2.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
@@ -693,6 +694,12 @@
                 <DeployFile LocalName="Win64\Debug\LccThrottleApp.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win64">
                         <RemoteName>LccThrottleApp.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="Win64\Debug\LccThrottleApp.rsm" Configuration="Debug" Class="DebugSymbols">
+                    <Platform Name="Win64">
+                        <RemoteName>LccThrottleApp.rsm</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
